<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text" />

        <RadioButton
            android:id="@+id/radioBinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binary" />
    </RadioGroup>

    <TextView
        android:id="@+id/editTextFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_toLeftOf="@+id/btnSelect"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/memberList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDonate"
        android:layout_below="@+id/editTextFileName"
        android:layout_marginTop="11dp" >

    </ListView>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextFileName"
        android:layout_alignParentRight="true"
        android:onClick="selectDialog"
        android:text="@string/open_button" />

    <TextView
        android:id="@+id/memberCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextFileName"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:textColor="#00FF00"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/memberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/memberCount"
        android:layout_alignBottom="@+id/memberCount"
        android:layout_toLeftOf="@+id/memberCount"
        android:text="@string/members"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button
        android:id="@+id/btnDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="donate"
        android:text="@string/donate" />

</RelativeLayout>